@@ -20,7 +20,7 @@ return {
 		idleautoheal = 5,
 		idletime = 1800,
 		mass = 200000,
-		health = 10000,
+		health = 8500,
 		maxslope = 17,
 		speed = 33.0,
 		maxwaterdepth = 0,
@@ -126,7 +126,7 @@ return {
 				name = "Heavy long-range g2g plasma cannon",
 				noselfdamage = true,
 				predictboost = 0.25,
-				range = 1325,
+				range = 1450,
 				reloadtime = 8,
 				soundhit = "xplomed2",
 				soundhitwet = "splslrg",
@@ -162,7 +162,7 @@ return {
 				name = "Heavy long-range g2g plasma cannon",
 				noselfdamage = true,
 				predictboost = 0.25,
-				range = 1325,
+				range = 1450,
 				reloadtime = 8,
 				soundhit = "xplomed2",
 				soundhitwet = "splslrg",
