@@ -3,11 +3,11 @@ return {
 		maxacc = 0.23,
 		maxdec = 0.8625,
 		energycost = 1400,
-		metalcost = 110,
+		metalcost = 130,
 		builddistance = 96,
 		builder = true,
 		buildpic = "CORNECRO.DDS",
-		buildtime = 2400,
+		buildtime = 2800,
 		canassist = false,
 		canmove = true,
 		canresurrect = true,
