@@ -5,7 +5,7 @@ return {
 		energycost = 1150,
 		metalcost = 140,
 		buildpic = "CORTHUD.DDS",
-		buildtime = 1970,
+		buildtime = 2100,
 		canmove = true,
 		category = "BOT MOBILE WEAPON ALL NOTSUB NOTSHIP NOTAIR NOTHOVER SURFACE EMPABLE",
 		collisionvolumeoffsets = "0 0 0",
@@ -18,7 +18,7 @@ return {
 		idleautoheal = 5,
 		idletime = 1800,
 		mass = 300,
-		health = 1000,
+		health = 1100,
 		maxslope = 14,
 		speed = 45.0,
 		maxwaterdepth = 12,
