@@ -122,13 +122,13 @@ return {
 				edgeeffectiveness = 0.9,
 				explosiongenerator = "custom:genericshellexplosion-medium",
 				gravityaffected = "true",
-				impulsefactor = 1.8,
+				impulsefactor = 1.4,
 				name = "RapidArtillery",
 				noselfdamage = true,
 				proximitypriority = -3,
 				range = 1470,
 				mygravity = 0.1333,
-				reloadtime = 0.4,
+				reloadtime = 0.5,
 				soundhit = "xplomed4",
 				soundhitwet = "splslrg",
 				soundstart = "cannhvy2",
